# libserum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Minimal-code-example.md  Minimal-code-example.txt  README.md  serum-decode.cpp  serum-decode.h
.github/workflows/: libserum.yml
src/: serum-decode.cpp  serum-decode.h  serum-version.h  serum.h  serumwin.h  sparse-vector.h  test.cpp
